--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ section.hero > button {
 main article {
   padding: 48px 96px;
 }
+ 
 
 main p {
   line-height: 1.75;
@@ -110,7 +111,7 @@ main p {
   font-size: 75px;
 }
 
-p:first-child::first-letter {
+main p:first-child::first-letter {
   float: left;
   margin: 0 8px 0 4px;
   font-size: 3rem;
