--- a/style.css
+++ b/style.css
@@ -136,6 +136,11 @@ span.tooltip {
   cursor: pointer;
 }
 
+/* underline span on hover/focus */
+span.tooltip:hover,
+span.tooltip:focus {
+  text-decoration: underline;
+}
 /* show tooltip on hover/focus */
 span.tooltip:hover > span,
 span.tooltip:focus > span {
@@ -143,7 +148,8 @@ span.tooltip:focus > span {
 }
 
 /* styling for tooltip bubble */
-span.tooltip span {
+span.tooltip {
+  visibility: hidden;
   width: 120px;
   background-color: black;
   color: #fff;
