--- a/style.css
+++ b/style.css
@@ -110,6 +110,13 @@ main p {
   margin-bottom: 48px;
 }
 
+article p:first-of-type .dropcaps {
+  font-size: 3em;
+  float: left;         
+  line-height: 1;      
+  margin-right: 10px;   
+  margin-top: -0.1em;
+}
 
 main > article img {
   float: left;
@@ -145,6 +152,7 @@ span.tooltip:focus {
 span.tooltip:hover > span,
 span.tooltip:focus > span {
   display: inline;
+  z-index: 1;
 }
 
 
