--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ main p {
   margin-bottom: 48px;
 }
 
-article p:first-of-type .dropcaps {
+article p:first-of-type {
   font-size: 3em;
   float: left;         
   line-height: 1;      
