--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ main p {
   margin-bottom: 48px;
 }
 
-article p:first-of-type {
-  font-size: xx-large;
+article p:first-of-type .dropcaps {
+  font-size: 3em;
   float: left;         
   line-height: 1;      
   margin-right: 10px;   
